--- a/partsset/index.html
+++ b/partsset/index.html
@@ -4,10 +4,12 @@
 <meta charset="UTF-8">
 <meta name="description" content="">
 <title>Parts Set</title>
+<link rel="stylesheet" href="css/control1.css">
 </head>
 <body>
 	<h1>テキストボックス</h1>
-	<input type="text" class="text">
+	<input type="text" class="text" value="テキスト"><br />
+	<input type="email" class="email" value="mail@mail.com">
 	<h1>ラジオボタン</h1>
 	<input type="radio" class="radio" value="1">男<br />
 	<input type="radio" class="radio" value="2">女
