PartsSet control1 修正

--- a/partsset/index.html
+++ b/partsset/index.html
@@ -6,7 +6,12 @@
 <title>Parts Set</title>
 <link rel="stylesheet" href="css/control1.css">
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="js/control1.js"></script>
+<script src="js/easyselectbox.min.js"></script>
+<script>
+	$(function(){
+		$('.select').easySelectBox();
+	});
+</script>
 </head>
 <body>
 	<h1>テキストボックス</h1>
@@ -20,14 +25,11 @@
 	<input type="checkbox" class="checkbox"> -->
 	<h1>セレクトメニュー</h1>
 	<p>
-    <span class="select">
-			<select name="" class="select-select">
-				<option value="">--- 選択してください ---</option>
-				<option value="1">4年制課程</option>
-				<option value="2">2年制課程</option>
-			</select>
-			<span class="select-value"></span>
-		</span>
+		<select name="" class="select">
+			<option value="">--- 選択してください ---</option>
+			<option value="1">4年制課程</option>
+			<option value="2">2年制課程</option>
+		</select>
 	</p>
 	<h1>テキストエリア</h1>
 	<textarea cols="30" rows="10"></textarea>
