セミナーカードCSS修正

--- a/partsset/seminar_card.html
+++ b/partsset/seminar_card.html
@@ -75,7 +75,7 @@
 				</ul>
 			</div>
 			<div class="middle">
-				<h3>実践で使えるデザイン・レイアウトのテクニック</h3>
+				<h3>実践で使える<br />　</h3>
 			</div>
 			<div class="bottom">
 				<ul class="cf">
