セミナー詳細デザイン当て完了

--- a/partsset/index2.html
+++ b/partsset/index2.html
@@ -43,6 +43,8 @@
 		<option value="12">12</option>
 	</select>
 	</p>
+	<h1>テキストエリア</h1>
+	<textarea name="" id="" cols="30" rows="10"></textarea>
 	<h1>リッチエディタ</h1>
 	<div class="richeditor">
 		<ul class="cf">
